# Expenses-Splitter

./: README.md  expense_splitter.ipynb  expense_splitter_midterm.py  expense_splitter_midterm_2.ipynb  expense_splitter_midterm_2.py  expenses splitter example file.xlsx  expenses_splitter_example_file_2.xlsx  final_expense_splitter.py  pyproject.toml  split_final_test.py  splitter_final.py  test_expenses_final.py
